[README] Add documentation for the initial feature set